--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "chartist": "^0.11.4",
+    "classnames": "^2.2.6",
+    "material-ui-icons": "^1.0.0-beta.36",
     "query-string": "^6.13.7",
     "react": "^17.0.1",
+    "react-chartist": "^0.14.4",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
